--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "php": ">=5.4.0",
         "symfony/framework-bundle": "~2.1",
         "stof/doctrine-extensions-bundle": "1.1.*@dev",
-        "publero/code-generator": "dev-feature/sequence-generator"
+        "publero/code-generator": "dev-feature/sequence-generator",
+        "publero/test": "*@dev",
+        "symfony/finder": "~2.1"
     },
     "autoload": {
-        "psr-0": { "Publero\\FileBundle": "" }
+        "psr-4": { "Publero\\FileBundle\\": "" }
     },
     "target-dir": "Publero/FileBundle"
 }
